# specgraph

./: LICENSE  README.md  pyproject.toml  specgraph.yaml  trk.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yaml  publish.yaml  workflow.yaml
.tickets/: TEMPLATE.md
src/specgraph/: __init__.py  __main__.py
src/trk/: __main__.py
tests/: test_specgraph.py
