[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "specgraph"
dynamic = ["version"]
description = "Spec-driven traceability CLI for software projects"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Nathan Henrie" },
]
keywords = ["traceability", "specs", "tickets", "project-management", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Quality Assurance",
]

[project.scripts]
specgraph = "specgraph:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/specgraph/_version.py"

[project.urls]
Repository = "https://github.com/nthh/specgraph"
